templates/vrijbrp_template.yaml
---
# Source: vrijbrp/charts/balie-ws/templates/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-balie-ws
  labels:
    helm.sh/chart: balie-ws-0.1.1
    app.kubernetes.io/name: balie-ws
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: balie-ws-nginx
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/balie-ws/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-balie-ws-backend
  labels:
    helm.sh/chart: balie-ws-0.1.1
    app.kubernetes.io/name: balie-ws
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: balie-ws
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/balie/templates/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-balie
  labels:
    helm.sh/chart: balie-0.1.1
    app.kubernetes.io/name: balie
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: balie-nginx
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/balie/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-balie-backend
  labels:
    helm.sh/chart: balie-0.1.1
    app.kubernetes.io/name: balie
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: balie
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/hcbrp/templates/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-hcbrp
  labels:
    helm.sh/chart: hcbrp-0.1.0
    app.kubernetes.io/name: hcbrp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hcbrp-nginx
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/hcbrp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-hcbrp-backend
  labels:
    helm.sh/chart: hcbrp-0.1.0
    app.kubernetes.io/name: hcbrp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hcbrp
    app.kubernetes.io/instance: release-name
---
# Source: vrijbrp/charts/balie-ws/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-balie-ws
  labels:
    helm.sh/chart: balie-ws-0.1.1
    app.kubernetes.io/name: balie-ws
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: balie-ws
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: balie-ws
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
      - name: config
        secret:
          secretName: release-name-balie-ws
      - name: oracle-config
        secret:
          secretName: release-name-balie-ws
      - name: log4j
        configMap:
          name: release-name-balie-ws
      containers:
        - name: release-name-balie-ws
          securityContext:
            {}
          image: "vrijbrp/balie-ws:develop"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
           initialDelaySeconds: 5
           httpGet:
             path: /personen-ws/rest/v2/info
             port: http
          livenessProbe:
           initialDelaySeconds: 30
           httpGet:
             path: /personen-ws/rest/v2/info
             port: http
          volumeMounts:
            - name: config
              mountPath: /usr/local/tomcat/procura/applicaties/personen-ws/config/applicatie.properties
              subPath: applicatie.properties
            - name: oracle-config
              mountPath: /oracle/config/tnsnames.ora
              subPath: tnsnames.ora
            - name: log4j
              readOnly: true
              mountPath: /usr/local/tomcat/lib/log4j.properties
              subPath: log4j.properties
          resources:
            {}
---
# Source: vrijbrp/charts/balie-ws/templates/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-balie-ws-nginx
  labels:
    helm.sh/chart: balie-ws-0.1.1
    app.kubernetes.io/name: balie-ws
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: balie-ws-nginx
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: balie-ws-nginx
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
        - name: nginx-config
          configMap:
            name: release-name-balie-ws-personen-ws-nginx
      containers:
        - name: release-name-balie-ws-nginx
          securityContext:
            {}
          image: "docker.io/nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
           initialDelaySeconds: 5
           httpGet:
             path: /personen-ws/rest/v2/info
             port: http
          livenessProbe:
           initialDelaySeconds: 30
           httpGet:
             path: /personen-ws/rest/v2/info
             port: http
          volumeMounts:
            - name: nginx-config
              subPath: default.conf.template
              readOnly: true
              mountPath: /etc/nginx/templates/default.conf.template
          resources:
            {}
---
# Source: vrijbrp/charts/balie/templates/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-balie-nginx
  labels:
    helm.sh/chart: balie-0.1.1
    app.kubernetes.io/name: balie
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: balie-nginx
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: balie-nginx
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
        - name: nginx-config
          configMap:
            name: release-name-balie-personen-nginx
      containers:
        - name: release-name-balie-nginx
          securityContext:
            {}
          image: "docker.io/nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
           initialDelaySeconds: 5
           httpGet:
             path: /personen/rest/v2/info
             port: http
          livenessProbe:
           initialDelaySeconds: 30
           httpGet:
             path: /personen/rest/v2/info
             port: http
          volumeMounts:
            - name: nginx-config
              subPath: default.conf.template
              readOnly: true
              mountPath: /etc/nginx/templates/default.conf.template
          resources:
            {}
---
# Source: vrijbrp/charts/hcbrp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-hcbrp
  labels:
    helm.sh/chart: hcbrp-0.1.0
    app.kubernetes.io/name: hcbrp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hcbrp
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hcbrp
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
      - name: config
        secret:
          secretName: release-name-hcbrp
      containers:
        - name: release-name-hcbrp
          securityContext:
            {}
          image: "vrijbrp/haal-centraal-brp-bevragen:develop"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config/application.properties
              subPath: application.properties
          resources:
            {}
---
# Source: vrijbrp/charts/hcbrp/templates/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-hcbrp-nginx
  labels:
    helm.sh/chart: hcbrp-0.1.0
    app.kubernetes.io/name: hcbrp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hcbrp-nginx
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hcbrp-nginx
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
        - name: nginx-config
          configMap:
            name: release-name-hcbrp-hcbrp-nginx
      containers:
        - name: release-name-hcbrp-nginx
          securityContext:
            {}
          image: "docker.io/nginx:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              subPath: default.conf.template
              readOnly: true
              mountPath: /etc/nginx/templates/default.conf.template
          resources:
            {}
---
# Source: vrijbrp/charts/balie/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-balie
  labels:
    helm.sh/chart: balie-0.1.1
    app.kubernetes.io/name: balie
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.0"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: release-name-balie
  selector:
    matchLabels:
      app.kubernetes.io/name: balie
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: balie
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: release-name-balie
        - name: config
          secret:
            secretName: release-name-balie
        - name: log4j
          configMap:
            name: release-name-balie
      containers:
        - name: release-name-balie
          securityContext:
            {}
          image: "vrijbrp/balie:develop"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
           initialDelaySeconds: 5
           httpGet:
             path: /personen/rest/v2/info
             port: http
          livenessProbe:
           initialDelaySeconds: 30
           httpGet:
             path: /personen/rest/v2/info
             port: http
          volumeMounts:
            - name: app
              mountPath: /usr/local/tomcat/procura/applicaties/personen
            - name: config
              mountPath: /usr/local/tomcat/procura/applicaties/personen/config/applicatie.properties
              subPath: applicatie.properties
            - name: log4j
              readOnly: true
              mountPath: /usr/local/tomcat/lib/log4j.properties
              subPath: log4j.properties
          resources:
            {}
  volumeClaimTemplates:
    - metadata:
        name: app
        annotations:
          volume.alpha.kubernetes.io/storage-class: default
      spec:
        accessModes:
        - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
---
# Source: vrijbrp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-vrijbrp
  labels:
    helm.sh/chart: vrijbrp-0.1.5
    app.kubernetes.io/name: vrijbrp
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.27.1-SNAPSHOT"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /personen
            backend:
              serviceName: release-name-vrijbrp-balie
              servicePort: 80
          - path: /personen-ws
            backend:
              serviceName: release-name-vrijbrp-balie-ws
              servicePort: 80
          - path: /haal-centraal-brp-bevragen
            backend:
              serviceName: release-name-vrijbrp-hcbrp
              servicePort: 80
